<resources>
    <!-- General & Important things -->
    <string name="project_github_code" translatable="false">https://github.com/froodyapp/froody-android</string>
    <string name="project_bugtracker" translatable="false">https://github.com/froodyapp/froody-android/issues</string>
    <string name="project_translation_service" translatable="false">https://crowdin.com/project/froodyapp</string>
    <string name="share_link_url_base" translatable="false">https://froodyapp.github.io/share.html?</string>
    <string name="share_link_url_with_entryid_param" translatable="false">https://froodyapp.github.io/share.html?entryId=%1$d</string>
    <string name="share_link_url_with_entryid__and_server_param" translatable="false"><![CDATA[https://froodyapp.github.io/share.html?entryId=%1$d&server=%2$s]]></string>
    <string name="project_github_page" translatable="false">https://froodyapp.github.io</string>
    <string name="server_default" translatable="false">https://api.froody-app.at</string>
    <string name="app_version_v" translatable="false">App Version  v%1$s</string>

    <!-- General words -->
    <string name="yes" translatable="false">@android:string/yes</string>
    <string name="no" translatable="false">@android:string/no</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="image">Image</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="more">More</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="error">Error</string>
    <string name="all">All</string>
    <string name="contributors">Contributors</string>
    <string name="about_">About</string>

    <!-- More general words -->
    <string name="search_dotdotdot">Search…</string>
    <string name="distribution_type">Distribution</string>
    <string name="certification">Certification</string>
    <string name="contact">Contact</string>
    <string name="maintainers">Maintainers</string>
    <string name="map">Map</string>
    <string name="blog">Blog</string>
    <string name="license">License</string>
    <string name="changelog">Changelog</string>

    <!-- Main -->
    <string name="navigation_drawer_open">Open nav-drawer</string>
    <string name="navigation_drawer_close">Close nav-drawer</string>
    <string name="no_entries_were_published_by_me">No entries available</string>
    <string name="help_and_share"><![CDATA[Help & Share]]></string>
    <string name="really_delete_entry">Do you really want to delete this entry?</string>
    <string name="share_entry_ask">Share entry?</string>
    <string name="share">Share…</string>
    <string name="donate_bitcoin">Donate\nBitcoin</string>
    <string name="duration_days_left">%1$d days left</string>
    <string name="duration_days_left_text">Days left</string>

    <!-- Publish -->
    <string name="suggested">Suggested</string>
    <string name="select_froody">Select Froody…</string>
    <string name="hint__description__enter_here">Enter description for this entry here (e.g. quality, for making marmalade, subtype…)</string>
    <string name="hint__contact__enter_here">Enter contact details for this entry here (should contain your Tel. No. or E-Mail Addr.)</string>
    <string name="publish_entry_now">Publish now</string>
    <string name="publish_entry">Publish</string>
    <string name="limited_time_active_notice">Caution! The entry is available as of now for %1$d days.</string>
    <string name="share_my_entry_at_froody">My entry at the Froody App</string>
    <string name="share_chooser_share_entry">Share entry</string>
    <string name="nav__my_entries">My Entries</string>
    <string name="error_cannot_publish_entry">Error: Cannot publish entry</string>

    <!-- Info -->
    <string name="show_licenses">Show licenses</string>
    <string name="show_license_of_app">Show license of app</string>
    <string name="show_gplv3_license">Show GNU GPLv3 license</string>
    <string name="show_third_party_licenses">Show 3rd party licenses</string>
    <string name="more_information">More information</string>
    <string name="gpl_v3_license_text" translatable="false">
        Copyright © 2016-2017
        \nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
        \n
        \nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
    </string>
    <string name="apache2_license_text" translatable="false">
        Copyright © 2016-2017
        \nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License.
        \n
        \nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
    </string>

    <!-- Location -->
    <string name="gps_located_user" translatable="false">$LOCATION$</string>
    <string name="request_location">Request location</string>
    <string name="gps_locating_user">Locating…</string>
    <string name="address_most_near">Nearby</string>
    <string name="error_bad_permissions">Please allow Froody to access the location of your device.\n\nWithout this permission you cannot publish entries with Froody and your current position on the map cannot be determined.\n\nYou can locate again by pressing the location-button on the top toolbar.</string>
    <string name="show_map_on_current_location">Show map on current location?</string>
    <string name="zoom_out">Zoom out</string>
    <string name="cannot_locate_user">Cannot locate user. Please enable location services in system settings!</string>
    <string name="error_couldnt_connect_or_register">Error: Could not connect to Server or couldn\'t check user.</string>

    <string name="support_the_project">Support the project</string>
    <string name="translate">Translate</string>
    <string name="spread">Spread</string>
    <string name="report_bugs">Report\nbugs</string>
    <string name="about_the_app">About\nthe app</string>
    <string name="error_incomplete_input">Error: Incomplete input</string>
    <string name="donate__bitcoin_id" translatable="false">1B9ZyYdQoY9BxMe9dRUEKaZbJWsbQqfXU5</string>
    <string name="donate__bitcoin_amount" translatable="false">0.01</string>
    <string name="donate__bitcoin_message" translatable="false">Have some coke, and a nice day</string>
    <string name="donate__bitcoin_url" translatable="false">https://gsantner.github.io/#donate</string>
</resources>
