<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_my_entries"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav__my_entries" />

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_white_48px"
            android:title="@string/map" />

        <item
            android:id="@+id/nav_publish_entry"
            android:icon="@drawable/ic_add_white_48px"
            android:title="@string/publish_entry" />
    </group>

    <item android:title="@string/more">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_white_48px"
                    android:title="@string/settings" />
                <item
                    android:id="@+id/nav_informations"
                    android:icon="@drawable/ic_info_black_24dp"
                    android:title="@string/informations" />
            </group>
            <item
                android:id="@+id/nav_homepage"
                android:icon="@drawable/ic_public_black_48px"
                android:title="@string/blog" />
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_github_icon"
                android:title="@string/github" />
        </menu>
    </item>


</menu>
