<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog__entry_type_selection__root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/activity_margin_small_4">

    <!-- Header -->
    <android.support.design.widget.TabLayout
        android:id="@+id/dialog__entry_type_selection__tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        app:tabGravity="fill"
        app:tabIndicatorHeight="4dp"
        app:tabMaxWidth="0dp"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/primary_light">

        <android.support.design.widget.TabItem
            android:id="@+id/dialog__entry_type_selection__tab_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all" />

        <android.support.design.widget.TabItem
            android:id="@+id/dialog__entry_type_selection__tab_suggested"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suggested" />

    </android.support.design.widget.TabLayout>

    <!-- Content -->
    <EditText
        android:id="@+id/dialog__entry_type_selection__search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog__entry_type_selection__tab_layout"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/bottom_border"
        android:hint="@string/search_dotdotdot"
        android:maxLines="1"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:textSize="14sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dialog__entry_type_selection__recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/dialog__entry_type_selection__button_cancel"
        android:layout_below="@+id/dialog__entry_type_selection__search"
        android:minHeight="100dp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        app:layoutManager="LinearLayoutManager" />

    <TextView
        android:id="@+id/dialog__entry_type_selection__button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dialog__entry_type_selection__button_cancel"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:background="@color/primary_dark"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/reset"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        android:visibility="gone" />

    <TextView
        android:id="@+id/dialog__entry_type_selection__button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:background="@color/primary_dark"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white" />


</RelativeLayout>