<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin_small_4"
    tools:context="io.github.froodyapp.activity.MoreFragment"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- My Entries -->
        <android.support.v7.widget.CardView
            android:id="@+id/more__fragment__my_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="75dp"
            card_view:cardBackgroundColor="@color/accent"
            card_view:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:weightSum="1">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_weight="0.70"
                    android:text="@string/nav__my_entries"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/more__fragment__my_entries__count"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="0.30"
                    android:gravity="center_horizontal|end"
                    android:textSize="38sp"
                    tools:text="5" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!-- Settings -->
        <android.support.v7.widget.CardView
            android:id="@+id/more__fragment__settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/input_field_margin"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="80dp"
            card_view:cardBackgroundColor="@color/accent"
            card_view:cardCornerRadius="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center_vertical"
                android:layout_weight="0.80"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/settings"

                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textSize="22sp"
                android:textStyle="bold" />
        </android.support.v7.widget.CardView>


        <!-- Help -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/input_field_margin"
            android:minHeight="80dp"
            card_view:cardBackgroundColor="@color/primary_light"
            card_view:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginBottom="8dp"
                    android:text="@string/support_the_project"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="120dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/more__fragment__button_support__bug_report"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableTop="@drawable/ic_bug_report_black_52dp"
                            android:text="@string/report_bugs" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/more__fragment__button_support__bitcoin_donation"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableTop="@drawable/ic_euro_symbol_black_52dp"
                            android:text="@string/donate_bitcoin"
                            android:visibility="gone" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/more__fragment__button_support__spread"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableTop="@drawable/ic_thumb_up_black_52dp"
                            android:text="@string/spread" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/more__fragment__button_support__translate"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableTop="@drawable/ic_translate_black_52dp"
                            android:text="@string/translate" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <!-- Informations -->
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/input_field_margin"
            android:minHeight="80dp"
            card_view:cardBackgroundColor="@color/primary_light"
            card_view:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginBottom="8dp"
                    android:text="@string/more_information"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minHeight="120dp"
                        android:orientation="horizontal">

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/more__fragment__button_info__app"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableTop="@drawable/ic_info_black_52dp"
                            android:text="@string/about_the_app" />

                        <android.support.v7.widget.AppCompatButton
                            android:id="@+id/more__fragment__button_info__blog"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:drawableTop="@drawable/ic_public_black_52px"
                            android:text="@string/blog" />
                    </LinearLayout>
                </HorizontalScrollView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>